app/styles/lang/_es.scss
body.lang_es {

  .range .range-end {
    width: 125px;
  }

  /* Details */
  #VehicleDetailsPage {
    @media (max-width: 1090px) {

      .well-title {
        font-size: 16px;

        .well-sub-title, a {
          font-size: 13px;
          margin-top: 2px;
        }
      }
    }

    .btn-save-changes {
      width: 120px;
    }

    .sidebar .notice-bar {
      .paired-body {
        width: 80%;
      }
    }

    .accordion-button {
      width: 340px;
    }
  }


  /* Analytics */
  #AnalyticsPage {
    @media (max-width: 1090px) {
      .well-title {
        font-size: 16px;
      }
    }
  }

  /* Title Releases */
  #TitleReleasesPage {
    .col-xs-9 {width:77%;}

    .filter-options {
      .col-xs-5 {
        width: 31%;
      }
      .col-xs-7 {
        width: 66%;
      }
    }
    .requests-grid {
      .btn-title-request {
        width: 150px;
        font-size:8px;
      }
    }
  }

  /* Payments */
  #PaymentsPage {
    .col-xs-9 {width:77%;}
    .well-title {
      .well-sub-title, a {
        font-size: 13px;
        margin-top: 6px;
      }
      button {
        font-size: 14px;
        margin-top: 6px;
      }
    }
    .lockup-minor {
      font-size: 11px;
    }

    .search Label {font-size:10px;}

    @media (max-width: 1150px) {

      .well-title {
        font-size: 15px;

        .well-sub-title, a, .right {
          font-size: 12px !important;
          margin-top: 4px !important;
        }
        button {
          font-size: 14px;
          margin-top: 6px;
        }
      }

    }

    @media (max-width: 400px){
      .well-title{
        font-size: 14px;

        .well-sub-title, a, .right{
          font-size: 10px !important;
        }
      }
    }

    .filter-options {
      .col-md-5 {
        width: 120px;
        margin-top: -14px;
      }
      .col-md-7 {
        width: 232px;
      }
    }

    @media (min-width: 1170px) {
      .filter-options {
        .col-md-5 {
          width: 180px;
          margin-top: 0;
        }
      }
    }
  }

  /* Checkout */
  #CheckoutPage {
    @media (max-width: 1090px) {
      .well-title {
        font-size: 16px;
      }
    }
  }


  #ReceiptsPage {
    .col-xs-9 {width:77%;}
    .filter-options {
      .col-md-5 {
        width: 120px;
        margin-top: -14px;
      }
      .span7 {
        width: 232px;
      }
    }
    .search Label {font-size:10px;}
    @media (min-width: 1120px) {
      .filter-options {
        .col-md-5 {
          width: 160px;
          margin-top: 0;
        }
      }
    }
  }

  #AuctionDashboardPage {
    @media (max-width: 1090px) {

      .counter-list .counter {
        margin-left: 0;
      }

    }
  }

  /* Auction Nav */
  .app-header.auctions {
    .nav-bkgd {
      height: 62px;
    }
    .nav-primary li {
      max-width: 20%;
      text-align: center;

      &.link_auction_bulkflooring {
        width: 160px;
      }

      &.link_auction_dealersearch {
        width: 150px;
      }
    }
  }

  #ProfileSettingsPage, #AccountManagementPage, #AuctionSettingsPage {
    @media (max-width: 1090px) {

      .well-title {
        font-size: 16px;

        .well-sub-title, a {
          font-size: 13px;
          margin-top: 2px;
        }
        button {
          font-size: 12px;
          margin-top: 6px;
        }
      }

    }
    .questText{font-size:11px;}
  }

  /* Modals */
  .modal .btn-sm {
    font-size: 12px;
    padding: 5px 7px;
  }

  .nav-secondary{
    li {
      padding: 5px 8px 7px;
    }
  }
  #AccountManagementPage {
    .well-default-header {
      padding-bottom: 10px;
    }
  }
}

